<resources>

    <string name="app_name">MP Code Challenge</string>

    <string name="title_main_activity">Ingrese el monto</string>
    <string name="title_payment_methods_activity">Medios de pago</string>
    <string name="title_card_issuers_activity">Bancos</string>
    <string name="title_installments_activity">Cantidad de cuotas</string>

    <string name="currency_symbol">$</string>
    <string name="keyboard_1">1</string>
    <string name="keyboard_2">2</string>
    <string name="keyboard_3">3</string>
    <string name="keyboard_4">4</string>
    <string name="keyboard_5">5</string>
    <string name="keyboard_6">6</string>
    <string name="keyboard_7">7</string>
    <string name="keyboard_8">8</string>
    <string name="keyboard_9">9</string>
    <string name="keyboard_0">0</string>
    <string name="keyboard_00">00</string>
    <string name="continue_label">Continuar</string>
    <string name="default_price">0</string>
    <string name="default_price_decimals">00</string>
    <string name="payment_method_item_img_content_description">payment_method_item_img</string>
    <string name="positive_button">Confirmar</string>
    <string name="negative_button">Cancelar</string>
    <string name="payment_confirmation_message">¿Desea confirmar el pago en %s?</string>
    <string name="payment_succeed_title">¡El pago fue realizado exitosamente!</string>
    <string name="close">Cerrar</string>

</resources>
