<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/main_keyb_1"
            style="@style/TextViewKeyboardStyle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/keyboard_1" />

        <TextView
            android:id="@+id/main_keyb_2"
            style="@style/TextViewKeyboardStyle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/keyboard_2" />

        <TextView
            android:id="@+id/main_keyb_3"
            style="@style/TextViewKeyboardStyle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/keyboard_3" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/main_keyb_4"
            style="@style/TextViewKeyboardStyle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/keyboard_4" />

        <TextView
            android:id="@+id/main_keyb_5"
            style="@style/TextViewKeyboardStyle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/keyboard_5" />

        <TextView
            android:id="@+id/main_keyb_6"
            style="@style/TextViewKeyboardStyle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/keyboard_6" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/main_keyb_7"
            style="@style/TextViewKeyboardStyle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/keyboard_7" />

        <TextView
            android:id="@+id/main_keyb_8"
            style="@style/TextViewKeyboardStyle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/keyboard_8" />

        <TextView
            android:id="@+id/main_keyb_9"
            style="@style/TextViewKeyboardStyle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/keyboard_9" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/main_keyb_0"
            style="@style/TextViewKeyboardStyle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/keyboard_0" />

        <TextView
            android:id="@+id/main_keyb_00"
            style="@style/TextViewKeyboardStyle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/keyboard_00" />

        <ImageView
            android:id="@+id/main_keyb_backspace"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:src="@drawable/ic_backspace"
            android:onClick="onClick"/>

    </LinearLayout>

</LinearLayout>