<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:padding="20dp">

        <TextView
            android:id="@+id/main_currency_label"
            style="@style/TextAppearance.AppCompat.Display1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/currency_symbol"
            android:textColor="@color/enabled_disabled_selector" />

        <TextView
            android:id="@+id/main_price"
            style="@style/TextAppearance.AppCompat.Display3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/default_price"
            android:textColor="@color/enabled_disabled_selector"
            tools:text="150" />

        <TextView
            android:id="@+id/main_price_decimals"
            style="@style/TextAppearance.AppCompat.Display1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/default_price_decimals"
            android:textColor="@color/enabled_disabled_selector"
            tools:text="80" />

    </LinearLayout>

    <include layout="@layout/keyboard" />

    <Button
        android:id="@+id/main_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:backgroundTint="@color/enabled_disabled_selector"
        android:enabled="false"
        android:onClick="onClick"
        android:padding="10dp"
        android:text="@string/continue_label"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="17sp" />

</RelativeLayout>